edited styling and fixed link to coded by

--- a/src/style.css
+++ b/src/style.css
@@ -180,10 +180,12 @@ hr {
 .codedby {
     font-weight: 500;
     size: 15px;
+    text-align: center;
 }
 
 .codedbyref {
     font-weight: 500;
     size: 15px;
     color: #EBB9CB;
+    text-align: center;
 }
