--- a/src/style.css
+++ b/src/style.css
@@ -179,14 +179,15 @@ hr {
 
 .codedby {
     font-weight: 500;
-    font-size: 5px;
+    font-size: 10px;
     text-align: center;
-    padding: -40px;
+    margin-right : 375px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .codedbyref {
     font-weight: 500;
-    font-size: 5px;
+    font-size: 10px;
     color: #EBB9CB;
-    text-align: center;
 }
