--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 .card {
-    background: black;
+    background: #1B1C1C;
 }
 
 .main {
@@ -51,7 +51,7 @@ body{
     font-size: 80px;
     color: #FCFCD4;
     text-align: center;
-    margin: 0px 0px 80px 10px;
+    margin: 30px 0px 30px 10px;
     
 }
 
@@ -98,8 +98,8 @@ hr {
 }
 
 .smallweathercard{
-    background: black;
-    border-color: black;
+    background: #1B1C1C;
+    border-color: #1B1C1C;
 }
 
 .smallday {
